tests/paczka1/fuzzy1/84451919.err
Error in line 21: uhnPodWeYF A770 25,1
Error in line 23: dgWvab A770 44,1
Error in line 30: w9s A770 2,4
Error in line 31: w9s A119 62,1
Error in line 34: w9s A770 21,8
